--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="es-mex" />
+    <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      href="/logo/Logo2x.png"
+      sizes="512x48"
+      type="image/svg+xml"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Encriptador de textos</title>
   </head>
